--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3"
 services:
   es:
-    image: docker.elastic.co/elasticsearch/elasticsearch:6.3.2
-    container_name: es
+    image: elasticsearch:7.17.13
+    container_name: es_1
     environment:
       - discovery.type=single-node
     ports:
